--- a/LaptopWorld/frontend/pages/invoice.html
+++ b/LaptopWorld/frontend/pages/invoice.html
@@ -9,7 +9,8 @@
   <body class="bg-light">
     <div class="container py-5">
       <h3>Hóa đơn</h3>
-      <div id="invoice">Sử dụng `/api/invoice/:orderId` để lấy dữ liệu hóa đơn.</div>
+      <div id="invoice-root">Đang tải...</div>
     </div>
+    <script src="/js/main.js"></script>
   </body>
 </html>
