--- a/LaptopWorld/frontend/pages/product.html
+++ b/LaptopWorld/frontend/pages/product.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin - Laptop World</title>
+    <title>Sản phẩm - Laptop World</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body class="bg-light">
     <div class="container py-5">
-      <h3>Admin Dashboard (demo)</h3>
-      <p>Endpoints: <code>/api/admin/users</code></p>
-      <div id="admin-users">Đang tải danh sách người dùng...</div>
+      <div id="product-root">Đang tải...</div>
     </div>
     <script src="/js/main.js"></script>
   </body>
