--- a/DoAnChuyenNganh/frontend/admin-nav.html
+++ b/DoAnChuyenNganh/frontend/admin-nav.html
@@ -17,6 +17,11 @@
         </button>
     </li>
     <li class="nav-item" role="presentation">
+        <button class="nav-link" id="news-tab" data-bs-toggle="tab" data-bs-target="#news" type="button">
+            <i class="fas fa-newspaper"></i> Tin tức
+        </button>
+    </li>
+    <li class="nav-item" role="presentation">
         <button class="nav-link" id="users-tab" data-bs-toggle="tab" data-bs-target="#users" type="button">
             <i class="fas fa-users"></i> Người dùng
         </button>
