--- a/DoAnChuyenNganh/frontend/orders.html
+++ b/DoAnChuyenNganh/frontend/orders.html
@@ -25,9 +25,42 @@
         <div class="container">
             <div class="card">
                 <div class="card-body p-4">
-                    <h4 class="card-title mb-4">
-                        <i class="fas fa-shopping-bag"></i> Lịch sử đơn hàng
-                    </h4>
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h4 class="card-title mb-0">
+                            <i class="fas fa-shopping-bag"></i> Lịch sử đơn hàng
+                        </h4>
+                    </div>
+
+                    <!-- Filters -->
+                    <div class="row mb-4">
+                        <div class="col-md-4 mb-3">
+                            <label class="form-label">Trạng thái</label>
+                            <select class="form-select" id="statusFilter" onchange="applyFilters()">
+                                <option value="">Tất cả trạng thái</option>
+                                <option value="Cho xu ly">Chờ xử lý</option>
+                                <option value="Xac nhan">Đã xác nhận</option>
+                                <option value="Dang giao">Đang giao</option>
+                                <option value="Da giao">Đã giao</option>
+                                <option value="Da huy">Đã hủy</option>
+                                <option value="HoanTien">Hoàn tiền</option>
+                            </select>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label class="form-label">Từ ngày</label>
+                            <input type="date" class="form-control" id="fromDateFilter" onchange="applyFilters()">
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label class="form-label">Đến ngày</label>
+                            <input type="date" class="form-control" id="toDateFilter" onchange="applyFilters()">
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <button class="btn btn-outline-secondary btn-sm" onclick="clearFilters()">
+                            <i class="fas fa-redo"></i> Xóa bộ lọc
+                        </button>
+                        <span class="ms-3 text-muted" id="filterResultCount"></span>
+                    </div>
 
                     <div id="ordersContainer">
                         <div class="text-center py-5">
