--- a/DoAnChuyenNganh/frontend/admin-nav.html
+++ b/DoAnChuyenNganh/frontend/admin-nav.html
@@ -33,7 +33,7 @@
     </li>
     <li class="nav-item" role="presentation">
         <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button">
-            <i class="fas fa-comments"></i> Bình luận
+            <i class="fas fa-star"></i> Đánh giá
         </button>
     </li>
     <li class="nav-item" role="presentation">
