--- a/DoAnChuyenNganh/frontend/admin.html
+++ b/DoAnChuyenNganh/frontend/admin.html
@@ -364,7 +364,7 @@
                 <div class="tab-pane fade" id="reviews" role="tabpanel">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="mb-4">Quản lý Bình luận & Đánh giá</h5>
+                            <h5 class="mb-4">Quản lý Đánh giá</h5>
                             
                             <!-- Search and Filters -->
                             <div class="row mb-3">
