--- a/DoAnChuyenNganh/frontend/contact.html
+++ b/DoAnChuyenNganh/frontend/contact.html
@@ -141,9 +141,13 @@
 
                             <div class="mb-4">
                                 <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31434.005208326933!2d106.19561749306726!3d9.99614251696409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31a012fe3c82bb95%3A0x501c872f365da2f6!2zdHQuIEPDoG5nIExvbmcsIEPDoG5nIExvbmcsIFRyw6AgVmluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1764856839069!5m2!1svi!2s"
-                                    width="100%" height="300" style="border:0; border-radius: 1rem;" allowfullscreen=""
-                                    loading="lazy"></iframe>
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31434.005208326933!2d106.19561749306726!3d9.99614251696409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31a012fe3c82bb95%3A0x501c872f365da2f6!2zVHAuIEPDoG5nIExvbmcsIEPDoG5nIExvbmcsIFRyw6AgVmluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1764856839069!5m2!1svi!2s"
+                                    width="100%" 
+                                    height="300" 
+                                    style="border:0; border-radius: 1rem;" 
+                                    allowfullscreen="" 
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
                     </div>
