--- a/DoAnChuyenNganh/frontend/products.html
+++ b/DoAnChuyenNganh/frontend/products.html
@@ -134,8 +134,8 @@
                         </div>
                     </div>
 
-                    <!-- Products Container with Scrollbar -->
-                    <div style="max-height: calc(100vh - 200px); overflow-y: scroll; overflow-x: hidden; padding-right: 10px;">
+                    <!-- Products Container -->
+                    <div>
                         <!-- Products -->
                         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="productsGrid">
                             <!-- Products will be loaded here -->
